Center align issue solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -263,15 +263,15 @@ form {
     object-fit: cover;
 }
 .place-name {
-    width: 200px;
+    width: 100%;
     color: #FFF;
     font-size: 1.6rem;
     font-weight: 800;
     position: absolute;
-    top: 45% ;
-    left: 37%;
+    top: 45%;
     z-index: 1;
-
+    text-align: center;
+    margin: auto;
 }
 .item2 {
     grid-column: 7/span 6;
